cluster/infrastructure/tailscale/proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy
  namespace: wireguard-system
  annotations:
    # Critical: Tell this Ingress to use the ProxyClass that accepts routes
    tailscale.com/proxy-class: subnet-router-class
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        name: https
  tls:
    - hosts:
        - nginx
